--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MG</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/libs/min.css">
     <link rel="stylesheet" href="css/style.min.css">
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="wrapper">
+      <div class="content">
+        <header class="header">
+          <div class="header__top">
+            <div class="container">
+              <div class="header__top-inner">
+                <div class="header__box--left">
+                  <div class="header__logo">
+                    <a href="#">
+                      <span>MG</span>
+                    </a>
+                  </div>
+                  <div class="header__menu">
+                    <ul>
+                      <li><a href="#">О нас</a></li>
+                      <li><a href="#">Обратная связь</a></li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="header__box--right">
+                  <div class="header__text">
+                    <a class="header__phone menu-item" href="tel:89997759321"
+                      >+7 (495) 126-53-27</a
+                    >
+                    <a class="header__delivery delivery menu-item" href="#"
+                      >Доставка по всей России</a
+                    >
+                    <a class="close" href="#"></a>
+                  </div>
+
+                  <div class="header__search-form">
+                    <form>
+                      <input type="text" placeholder="Поиск" />
+                    </form>
+                  </div>
+
+                  <div class="header__btn">
+                    <a
+                      class="header__btn-menu icon-search"
+                      href="#"
+                      id="search"
+                    ></a>
+                    <a
+                      class="header__btn-menu icon-user"
+                      href="#"
+                      id="search"
+                    ></a>
+                    <a
+                      class="header__btn-menu icon-shopping-cart"
+                      href="#"
+                      id="search"
+                    ></a>
+                    <div class="header__btn-menu">
+                      <div class="hamburger">
+                        <div class="hamburger__span one" id="one"></div>
+                        <div class="hamburger__span two" id="two"></div>
+                        <div class="hamburger__span three" id="three"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </header>
+      </div>
+      <footer class="footer"></footer>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <scrip src="js/libs.min.js"></scrip>
-    <scrip src="js/main.js"></scrip>
-</body>
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 
 </html>
