--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MG</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/libs/min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/libs/min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body>
@@ -78,15 +80,202 @@
             </div>
           </div>
         </header>
+
+        <section class="categories">
+          <div class="container">
+            <div class="categories__inner categories__menu">
+              <div class="categories__inner--left">
+                <ul class="categories__menu-list">
+
+                  <li>
+                    <a href="#">
+                      Верхняя одежда
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Бомберы</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Жилеты</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Косухи</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Пальто</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Тренчи</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+                  
+                  <li>
+                    <a href="#">
+                      Штаны
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Джинсы</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Классические брюки</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Кожанные брюки</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Спортивные штаны</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Джемперы
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Пуловеры</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Свитеры</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Толстовки</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Футболки</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Пиджаки и костюмы
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Костюм с брюками</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Костюм с шортами</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Костюм с юбкой</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Пиджаки</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Аксессуары
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Очки</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Украшения</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Сумки</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Обувь
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Ботильоны</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Туфли</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Сапоги</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Кроссовки</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+
+              <div class="categories__inner--right">
+                <ul class="categories__menu-list">
+
+                  <li>
+                    <a href="#">
+                      Коллекции
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Casual</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Спорт</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Классика</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="#">
+                      Скидки
+                      <ul class="categories__inner-submenu categories__submenu">
+                        <div class="categories__submenu-items">
+                          <li class="categories__submenu-item">
+                            <a href="#">Распродажа</a>
+                          </li>
+                          <li class="categories__submenu-item">
+                            <a href="#">Акции</a>
+                          </li>
+                        </div>
+                      </ul>
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
       <footer class="footer"></footer>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
-        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.min.js"
+      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+      crossorigin="anonymous"
+    ></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
   </body>
-
 </html>
