--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
     <title>MG</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+      <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/libs/min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -23,7 +23,7 @@
                 <div class="header__box--left">
                   <div class="header__logo">
                     <a href="#">
-                      <span>MG</span>
+                      <span>MG</span>Clothes
                     </a>
                   </div>
                   <div class="header__menu">
@@ -262,6 +262,70 @@
 
                 </ul>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="slider">
+          <div class="container">
+            <div class="slider__inner">
+
+              <div class="slider__item">
+                <div class="slider__item-img img" style="background-image: url(images/slider1.jpeg);"></div>
+                <div class="slider__item-info">
+                  <div class="slider__suptitle">Выгодное предложение</div>
+                 <div class="slider__title">Вторая пара джинс -15%</div>
+                 <a class="slider__btn" href="#">Более подробная информация</a>
+                </div>
+                <div class="slider__item-dots">
+                  <div class="slider__item-dots--left">
+                    <div class="slider__item-dots__total">4</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="slider__item">
+                <div class="slider__item-img img" style="background-image: url(images/slider2.jpeg);"></div>
+                <div class="slider__item-info">
+                  <div class="slider__suptitle">Sale</div>
+                 <div class="slider__title">-15% на солнцезащитные очки</div>
+                 <a class="slider__btn" href="#">Более подробная информация</a>
+                </div>
+                <div class="slider__item-dots">
+                  <div class="slider__item-dots--left">
+                    <div class="slider__item-dots__total">4</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="slider__item">
+                <div class="slider__item-img img" style="background-image: url(images/slider3.jpeg);"></div>
+                <div class="slider__item-info">
+                  <div class="slider__suptitle">Цены ниже</div>
+                 <div class="slider__title">Любая пара сапог до 7000₽</div>
+                 <a class="slider__btn" href="#">Более подробная информация</a>
+                </div>
+                <div class="slider__item-dots">
+                  <div class="slider__item-dots--left">
+                    <div class="slider__item-dots__total">4</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="slider__item">
+                <div class="slider__item-img img" style="background-image: url(images/slider4.jpeg);"></div>
+                <div class="slider__item-info">
+                  <div class="slider__suptitle">Постоянным покупателям</div>
+                 <div class="slider__title">-10% по дисконтной карте</div>
+                 <a class="slider__btn" href="#">Более подробная информация</a>
+                </div>
+                <div class="slider__item-dots">
+                  <div class="slider__item-dots--left">
+                    <div class="slider__item-dots__total">4</div>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </section>
