finish salea-leaders

--- a/app/index.html
+++ b/app/index.html
@@ -329,6 +329,248 @@
             </div>
           </div>
         </section>
+
+        <section class="sales-leaders">
+          <div class="container">
+            <div class="sales-leaders__title title">Лидеры продаж</div>
+            <div class="sales-leaders__subtitle">Популярные модели из всех категорий</div>
+            <div class="sales-leaders__items">
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-1.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Брюки</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">4350₽</div>
+                    <div class="sales-leaders__price--old">5000₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-2.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Пиджак</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">3045₽</div>
+                    <div class="sales-leaders__price--old">3500₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-3.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Тренч</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">6525₽</div>
+                    <div class="sales-leaders__price--old">7500₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-4.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Брюки</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">4524₽</div>
+                    <div class="sales-leaders__price--old">5200₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-5.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Кожанные брюки</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">4089₽</div>
+                    <div class="sales-leaders__price--old">4700₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-6.jpg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Тренч</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">6960₽</div>
+                    <div class="sales-leaders__price--old">8000₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-7.jpg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Джинсы</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">2175₽</div>
+                    <div class="sales-leaders__price--old">2500₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="sales-leaders__item">
+                <div class="sales-leaders__inner">
+                  <div class="sales-leaders__discount">
+                    sale<span>-13%
+                    <div class="sales-leaders__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="sales-leaders__images">
+                    <a href="#"><img src="images/sales-leaders-8.jpeg" alt="sales leaders images"></a>
+                  </div>
+                  <div class="sales-leaders__description"> Свитер</div>
+                  <div class="sales-leaders__price">
+                    <div class="sales-leaders__price--new">1740₽</div>
+                    <div class="sales-leaders__price--old">2000₽</div>
+                  </div>
+                  <div class="sales-leaders__hidden">
+                    <div class="sales-leaders__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="sales-leaders__text">Купить</div>
+                        <div class="sales-leaders__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="sales-leaders__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
       </div>
       <footer class="footer"></footer>
     </div>
