finish load-more

--- a/app/index.html
+++ b/app/index.html
@@ -330,13 +330,13 @@
           </div>
         </section>
 
-        <section class="sales-leaders">
+        <section class="sales-leaders" >
           <div class="container">
             <div class="sales-leaders__title title">Лидеры продаж</div>
             <div class="sales-leaders__subtitle">Популярные модели из всех категорий</div>
-            <div class="sales-leaders__items">
+            <div class="sales-leaders__items " id="boxs">
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -365,7 +365,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -394,7 +394,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -423,7 +423,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -452,7 +452,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -481,7 +481,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -510,7 +510,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -539,7 +539,7 @@
                 </div>
               </div>
 
-              <div class="sales-leaders__item">
+              <div class="sales-leaders__item box">
                 <div class="sales-leaders__inner">
                   <div class="sales-leaders__discount">
                     sale<span>-13%
@@ -569,6 +569,9 @@
               </div>
 
             </div>
+            
+            <div class="sales-leaders__loadMore" id="loadMore"> Загрузить больше товаров</div>
+
           </div>
         </section>
       </div>
